spec/error_typed_overload_no_match.expected
spec/error_typed_overload_no_match.kex:6:16: error: `process` expects argument 1 to be Integer, but got Float64

process : Integer -> Integer

process : String -> String
Aborted: fix type errors before running (use --no-check to skip).
